attempt to work with laravel 7

--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "illuminate/support": "^5.0|^6.0",
-        "illuminate/view": "^5.0|^6.0",
+        "illuminate/support": "^5.0|^6.0|^7.0",
+        "illuminate/view": "^5.0|^6.0|^7.0",
         "nesbot/carbon": ">1.22",
         "dompdf/dompdf": "^0.8"
     },
